--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<div>
+    <img src="images/ucsd-logo.png">
+</div>
 <h1>Heading 2</h1>
 <p>Hello world!</p>
-
+<p><a href="/#images">Go to images</a></p>
+<section id="images">
+    <div>
+        <img src="images/colleges.png" width="300" height="200">
+    </div>
+    <div>
+        <img src="images/triton-logo.png" width="300" height="200">
+    </div>
+</section>
 </body>
 </html>
