--- a/index.html
+++ b/index.html
@@ -1,18 +1,61 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
 <body>
-<div>
-    <img src="images/ucsd-logo.png">
-</div>
-<h1>Heading 2</h1>
-<p>Hello world!</p>
-<p><a href="/#images">Go to images</a></p>
-<section id="images">
-    <div>
-        <img src="images/colleges.png" width="300" height="200">
+    <div id="navbar">
+        <img src="images/ucsd-logo.png" width="400px">
+        <div>
+            <ul>
+                <li class="nav-item"><a href="#1">Section 1</a></li>
+                <li class="nav-item"><a href="#2">Section 2</a></li>
+            </ul>
+         </div>
     </div>
-    <div>
-        <img src="images/triton-logo.png" width="300" height="200">
+<section id="section1">
+    <p>Section 1</p>
+        <div>
+            <img src="images/triton-logo.png" width="300" height="200">
+        </div>
+    <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Proin fusce consectetur lacinia ullamcorper pellentesque rutrum dis libero sociosqu. Arcu morbi diam lectus natoque dolor natoque suscipit proin. Feugiat luctus commodo etiam accumsan ullamcorper. Pellentesque dapibus nostra per ornare rhoncus tempor sagittis porttitor aliquam. Justo tempus rhoncus vel rutrum in odio tellus tellus purus. Nascetur sollicitudin imperdiet laoreet urna nibh magna. Diam fringilla parturient platea odio sit iaculis; ligula aliquet. Eget quam condimentum consequat gravida ullamcorper.
+        Venenatis curabitur cubilia magnis vivamus senectus accumsan magnis eros auctor. Venenatis hendrerit faucibus aenean scelerisque cursus maximus quam morbi. Eu interdum mauris netus dapibus conubia; tortor dictum duis. Habitant dui neque ad vitae taciti porta efficitur est. Diam et nibh turpis nisi malesuada non velit mus. Ad integer magnis magna; massa proin nisl. Class adipiscing risus aliquet phasellus viverra.
+        Duis per molestie tristique luctus; praesent fringilla condimentum facilisis. Sociosqu odio urna, suscipit quisque bibendum habitant. Congue ligula aliquet consequat duis velit sed proin proin. Ut fermentum lacus blandit congue orci aliquam praesent odio. Quisque nullam blandit non faucibus vivamus dictum litora magna. Consequat ultrices cubilia nisi egestas consequat felis porta rutrum. Egestas a mollis mattis in gravida metus auctor habitant leo. Sem sodales dolor sodales senectus augue cursus sagittis id. Dapibus id metus ad pulvinar suspendisse curae vulputate ornare quis.
+        Bibendum quisque et gravida nibh luctus. Parturient mattis felis nec sit rhoncus aliquam maximus. Posuere magna purus metus lorem lacinia himenaeos fames class. Cras venenatis senectus in netus hendrerit vestibulum. Nascetur natoque lorem tellus phasellus consectetur vehicula luctus auctor. Hendrerit magnis curae volutpat ultrices faucibus praesent consectetur quam. Elementum dignissim mattis arcu primis eleifend laoreet etiam.     
+        Interdum nunc montes pharetra tempor egestas suspendisse condimentum curae. Faucibus hac eleifend odio risus semper, molestie potenti dui. Mollis interdum mus ultricies imperdiet feugiat arcu tortor. Est lacinia nunc dui condimentum penatibus vel. Lacinia platea cras auctor volutpat elit suscipit dignissim. Suspendisse nascetur egestas auctor in lobortis vel. Nullam platea cubilia torquent et praesent praesent varius. Felis maecenas iaculis fusce montes pretium sodales natoque ridiculus. Torquent phasellus id cubilia mauris duis nec hendrerit malesuada.  
+    </p>
+</section>
+<section id="section2">
+    <p>Section 2</p>
+    <div id="2">
+        <img src="images/colleges.png" width="600">
+    </div>
+    <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Proin fusce consectetur lacinia ullamcorper pellentesque rutrum dis libero sociosqu. Arcu morbi diam lectus natoque dolor natoque suscipit proin. Feugiat luctus commodo etiam accumsan ullamcorper. Pellentesque dapibus nostra per ornare rhoncus tempor sagittis porttitor aliquam. Justo tempus rhoncus vel rutrum in odio tellus tellus purus. Nascetur sollicitudin imperdiet laoreet urna nibh magna. Diam fringilla parturient platea odio sit iaculis; ligula aliquet. Eget quam condimentum consequat gravida ullamcorper.
+        Venenatis curabitur cubilia magnis vivamus senectus accumsan magnis eros auctor. Venenatis hendrerit faucibus aenean scelerisque cursus maximus quam morbi. Eu interdum mauris netus dapibus conubia; tortor dictum duis. Habitant dui neque ad vitae taciti porta efficitur est. Diam et nibh turpis nisi malesuada non velit mus. Ad integer magnis magna; massa proin nisl. Class adipiscing risus aliquet phasellus viverra.
+        Duis per molestie tristique luctus; praesent fringilla condimentum facilisis. Sociosqu odio urna, suscipit quisque bibendum habitant. Congue ligula aliquet consequat duis velit sed proin proin. Ut fermentum lacus blandit congue orci aliquam praesent odio. Quisque nullam blandit non faucibus vivamus dictum litora magna. Consequat ultrices cubilia nisi egestas consequat felis porta rutrum. Egestas a mollis mattis in gravida metus auctor habitant leo. Sem sodales dolor sodales senectus augue cursus sagittis id. Dapibus id metus ad pulvinar suspendisse curae vulputate ornare quis.
+        Bibendum quisque et gravida nibh luctus. Parturient mattis felis nec sit rhoncus aliquam maximus. Posuere magna purus metus lorem lacinia himenaeos fames class. Cras venenatis senectus in netus hendrerit vestibulum. Nascetur natoque lorem tellus phasellus consectetur vehicula luctus auctor. Hendrerit magnis curae volutpat ultrices faucibus praesent consectetur quam. Elementum dignissim mattis arcu primis eleifend laoreet etiam.     
+        Interdum nunc montes pharetra tempor egestas suspendisse condimentum curae. Faucibus hac eleifend odio risus semper, molestie potenti dui. Mollis interdum mus ultricies imperdiet feugiat arcu tortor. Est lacinia nunc dui condimentum penatibus vel. Lacinia platea cras auctor volutpat elit suscipit dignissim. Suspendisse nascetur egestas auctor in lobortis vel. Nullam platea cubilia torquent et praesent praesent varius. Felis maecenas iaculis fusce montes pretium sodales natoque ridiculus. Torquent phasellus id cubilia mauris duis nec hendrerit malesuada.  
+    </p>
+</section>
+<section class="section3">
+    <div class="grid-container">
+        <div class="grid-item">
+            <h3>Box 1</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <div class="grid-item">
+            <h3>Box 2</h3>
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="grid-item">
+            <h3>Box 3</h3>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+        </div>
+        <div class="grid-item">
+            <h3>Box 4</h3>
+            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.</p>
+        </div>
     </div>
 </section>
 </body>
