--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
 <head>
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
 </head>
 
 <body>
     <div id="navbar">
-        <img src="images/ucsd-logo.png" width="400px">
+        <div class="top-logo">
+            <img src="images/ucsd-logo.png">
+        </div>
         <div>
             <ul>
                 <li class="nav-item"><a href="#1">Section 1</a></li>
@@ -15,9 +18,9 @@
          </div>
     </div>
 <section id="section1">
-    <p>Section 1</p>
+    <h2>Section 1</h2>
         <div>
-            <img src="images/triton-logo.png" width="300" height="200">
+            <img src="images/triton-logo.png">
         </div>
     <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Proin fusce consectetur lacinia ullamcorper pellentesque rutrum dis libero sociosqu. Arcu morbi diam lectus natoque dolor natoque suscipit proin. Feugiat luctus commodo etiam accumsan ullamcorper. Pellentesque dapibus nostra per ornare rhoncus tempor sagittis porttitor aliquam. Justo tempus rhoncus vel rutrum in odio tellus tellus purus. Nascetur sollicitudin imperdiet laoreet urna nibh magna. Diam fringilla parturient platea odio sit iaculis; ligula aliquet. Eget quam condimentum consequat gravida ullamcorper.
         Venenatis curabitur cubilia magnis vivamus senectus accumsan magnis eros auctor. Venenatis hendrerit faucibus aenean scelerisque cursus maximus quam morbi. Eu interdum mauris netus dapibus conubia; tortor dictum duis. Habitant dui neque ad vitae taciti porta efficitur est. Diam et nibh turpis nisi malesuada non velit mus. Ad integer magnis magna; massa proin nisl. Class adipiscing risus aliquet phasellus viverra.
@@ -27,9 +30,9 @@
     </p>
 </section>
 <section id="section2">
-    <p>Section 2</p>
+    <h2>Section 2</h2>
     <div id="2">
-        <img src="images/colleges.png" width="600">
+        <img src="images/colleges.png">
     </div>
     <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Proin fusce consectetur lacinia ullamcorper pellentesque rutrum dis libero sociosqu. Arcu morbi diam lectus natoque dolor natoque suscipit proin. Feugiat luctus commodo etiam accumsan ullamcorper. Pellentesque dapibus nostra per ornare rhoncus tempor sagittis porttitor aliquam. Justo tempus rhoncus vel rutrum in odio tellus tellus purus. Nascetur sollicitudin imperdiet laoreet urna nibh magna. Diam fringilla parturient platea odio sit iaculis; ligula aliquet. Eget quam condimentum consequat gravida ullamcorper.
         Venenatis curabitur cubilia magnis vivamus senectus accumsan magnis eros auctor. Venenatis hendrerit faucibus aenean scelerisque cursus maximus quam morbi. Eu interdum mauris netus dapibus conubia; tortor dictum duis. Habitant dui neque ad vitae taciti porta efficitur est. Diam et nibh turpis nisi malesuada non velit mus. Ad integer magnis magna; massa proin nisl. Class adipiscing risus aliquet phasellus viverra.
