--- a/index.html
+++ b/index.html
@@ -61,5 +61,13 @@
         </div>
     </div>
 </section>
+<section id="section2">
+    <form action="https://www.w3schools.com/action_page.php">
+        <h2>Subscribe to our Newsletter!</h2>
+        <label for="email">Enter your email:</label>
+        <input  id="email" name="email" required>
+        <input type="submit" value="Subscribe">
+    </form>
+</section>
 </body>
 </html>
