--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <script src="filename.js"></script>
 </head>
 
 <body>
@@ -66,7 +67,7 @@
         <h2>Subscribe to our Newsletter!</h2>
         <label for="email">Enter your email:</label>
         <input  id="email" name="email" required>
-        <input type="submit" value="Subscribe">
+        <input id="subscribe-form" type="submit" value="Subscribe">
     </form>
 </section>
 </body>
