--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
         <div class="top-logo">
             <img src="images/ucsd-logo.png">
         </div>
-        <div>
             <ul>
                 <li class="nav-item"><a href="#1">Section 1</a></li>
                 <li class="nav-item"><a href="#2">Section 2</a></li>
             </ul>
-         </div>
     </div>
 <section id="section1">
     <h2>Section 1</h2>
@@ -63,11 +61,11 @@
     </div>
 </section>
 <section id="section2">
-    <form action="https://www.w3schools.com/action_page.php">
+    <form action="" id="subscribe-form">
         <h2>Subscribe to our Newsletter!</h2>
         <label for="email">Enter your email:</label>
         <input  id="email" name="email" required>
-        <input id="subscribe-form" type="submit" value="Subscribe">
+        <input id="submit" type="submit" value="submit">
     </form>
 </section>
 </body>
